# gogteat

./: build.js  package.json  pnpm-lock.yaml  postcss.config.cjs  tao_monkey_patch.txt  tsconfig.json
public/: global.css  index.html
src/: App.svelte  constants.ts  helpers.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  menu.rs
src-tauri/src/patch_window/: macos.rs
src/HOC/: AppContextMenu.svelte  Editor.svelte  Preview.svelte  Sidebar.svelte  Statusbar.svelte  Toolbar.svelte
src/HOC/Preview/: Preview.svelte  preview.postcss
src/components/: Button.svelte  ContextMenu.svelte  DocumentItem.svelte  Draggable.svelte  FileItem.svelte  FileListItem.svelte  Icon.svelte  ProjectGroup.svelte
src/components/ContextMenu/: ContextMenu.svelte  index.ts  types.ts
src/models/: project.ts
src/services/: database.service.ts  projects.services.ts  seed.sql  storage.service.ts
src/store/: app.ts  editor.ts  projects.ts
src/styles/theme/: dark.postcss  index.postcss  light.postcss
