[package]
name = "gogteat"
version = "0.1.0"
description = "Markdown editor"
authors = ["freethinkel"]
license = ""
repository = ""
default-run = "gogteat"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.3", features = ["api-all", "macos-private-api"] }
window-vibrancy = { git = "https://github.com/tauri-apps/window-vibrancy", version = "0.1.0" }
log = "0.4"

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/tauri-plugin-sql"
branch = "release"
features = ["sqlite"]                                  # or "postgres", or "mysql"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
